# basic-dbsc-server

./: .env  .gitignore  Cargo.toml
src/: main.rs  routes.rs  session_store.rs
src/dbsc/: api.rs  mod.rs  routes.rs
