[package]
name = "basic-dbsc-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.8", features = ["http2", "macros"] }
axum-extra = { version = "0.12.5", features = ["cookie"] }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
chrono = { version = "0.4", features = ["serde"] }
console-subscriber = "0.5.0"
cookie = "0.18.1"
jsonwebkey = { version = "0.4.0", features = ["jsonwebtoken"] }
jsonwebtoken = { version = "10" }
rustls = "0.23.36"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tower-default-headers = "0.2.3"
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
